--- a/src/app/wrapper-page/wrapper-page.component.scss
+++ b/src/app/wrapper-page/wrapper-page.component.scss
@@ -1,3 +1,7 @@
+:host {
+  overflow: auto;
+}
+
 .wrapper {
   display: grid;
   grid-template-rows: 64px 1fr 72px;
@@ -34,6 +38,7 @@
 .content {
   padding: 12px 16px;
   overflow: auto;
+  display: grid;
 }
 
 .navbar {
