--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -1,3 +1,10 @@
+:host {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 100%;
+}
+
 .login {
   width: 100%;
   max-width: 310px;
