--- a/src/app/common/task-item/task-item.component.scss
+++ b/src/app/common/task-item/task-item.component.scss
@@ -11,29 +11,28 @@
 }
 
 .task__check {
-  width: 56px;
-  height: 56px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
   background: #141923;
-  border: 1px solid #2a2f3a;
+  border: 2px solid #2a2f3a;
   display: grid;
   place-items: center;
   box-shadow: inset 0 0 0 1px #2a2f3a;
 }
 
-.task__dot {
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background: #0a0b0e;
-}
-
-.task__check--on .task__dot {
+.task__check--on {
   background: var(--baseColor);
+  border-color: var(--baseColor);
 }
 
 .task__desc {
   color: #e6ecf8;
   font-size: 16px;
+}
+
+.task--checked .task__desc {
+  color: #8ea0bf;
+  text-decoration: line-through;
 }
 
