--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -1,6 +1,6 @@
 <section class="dash">
   <header class="dash__header">
-    <div class="dash__avatar">🕶️</div>
+    <div class="dash__avatar"><img src="lvl4.png" alt="Avatar" /></div>
     <h1 class="dash__title">Latest testosterone levels</h1>
   </header>
 
