--- a/src/app/common/morning-erection-indicator/morning-erection-indicator.component.html
+++ b/src/app/common/morning-erection-indicator/morning-erection-indicator.component.html
@@ -1,6 +1,12 @@
-<button class="indicator" type="button" (click)="toggle()" [class.indicator--down]="value" aria-label="Morning erection indicator">
-  <span class="label">{{ label }}</span>
-  <span class="eggplant" [class.eggplant--down]="value">🍆</span>
-</button>
+<div class="indicator-wrap">
+  <button class="indicator" type="button" (click)="toggle()" [class.indicator--down]="value" aria-label="Morning erection indicator">
+    <span class="label">{{ label }}</span>
+    <div class="right">
+      <span class="eggplant" [class.eggplant--down]="value">🍆</span>
+      <span class="description">Click to toggle</span>
+    </div>
+  </button>
+  
+</div>
 
 
